--- a/acTable-demo/pom.xml
+++ b/acTable-demo/pom.xml
@@ -9,7 +9,11 @@
     </parent>
     <artifactId>acTable-demo</artifactId>
 
-    <dependencies>
+    <dependencies><dependency>
+        <groupId>com.jcraft</groupId>
+        <artifactId>jsch</artifactId>
+        <version>0.1.55</version>
+    </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
