--- a/acTable-demo/src/main/resources/application.yml
+++ b/acTable-demo/src/main/resources/application.yml
@@ -1,23 +1,14 @@
 server:
   port: 9528
 spring:
-  datasource:
-#    url: jdbc:sqlserver://192.168.200.159\DEV;databaseName=data_standard
-#    username: net-dev
-#    password: 9DQ11kkb3E
-    url: jdbc:sqlserver://localhost;databaseName=dynamic_table
-    username: sa
-    password: zero
+  profiles:
+    active: mysql
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
-mybatis-plus:
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath*:/mapper/**/*.xml
 zero:
   mybatis:
     ac-table:
       entity-package: io.gitee.zerowsh.actable.demo.entity
-      model: add_or_update_del
+      model: ADD_OR_UPDATE_OR_DEL
       script: db/*.sql
