--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <revision>1.0.0</revision>
         <knife4j.version>2.0.5</knife4j.version>
         <hutool.version>5.6.1</hutool.version>
+        <druid.version>1.1.10</druid.version>
     </properties>
 
 </project>
