mysql增加数据初始化逻辑

--- a/acTable-demo/src/main/resources/application-mysql.yml
+++ b/acTable-demo/src/main/resources/application-mysql.yml
@@ -7,5 +7,5 @@ zero:
   ac-table:
     entity-package: io.gitee.zerowsh.actable.demo.entity.mysql
     model: ADD_OR_UPDATE_OR_DEL
-    script: db/*.sql
+    script: db/mysql.sql
     database-type: mysql
