--- a/acTable-demo/src/main/resources/application-mysql.yml
+++ b/acTable-demo/src/main/resources/application-mysql.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/dynamic_table?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost/dynamic_table?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
     password: zero
 zero:
