--- a/acTable-demo/src/main/resources/application-sql_server.yml
+++ b/acTable-demo/src/main/resources/application-sql_server.yml
@@ -1,11 +1,8 @@
 spring:
   datasource:
-      url: jdbc:sqlserver://192.168.200.159\DEV;databaseName=data_standard;allowMultiQueries=true
-      username: net-dev
-      password: 9DQ11kkb3E
-#    url: jdbc:sqlserver://localhost;databaseName=dynamic_table
-#    username: sa
-#    password: zero
+    url: jdbc:sqlserver://localhost;databaseName=dynamic_table
+    username: sa
+    password: zero
 zero:
   ac-table:
     entity-package: io.gitee.zerowsh.actable.demo.entity.sqlserver
