--- a/acTable-demo/pom.xml
+++ b/acTable-demo/pom.xml
@@ -29,6 +29,11 @@
             <version>2.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis.plus.version}</version>
+        </dependency>
         <!-- sqlserver依赖 -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
