调整注解名称 支持swagger注解

--- a/acTable/pom.xml
+++ b/acTable/pom.xml
@@ -57,6 +57,13 @@
             <artifactId>spring-boot</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.22</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
