--- a/acTable/pom.xml
+++ b/acTable/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>4.1</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
