初始化数据脚本执行逻辑优化

--- a/acTable/pom.xml
+++ b/acTable/pom.xml
@@ -34,7 +34,6 @@
             <artifactId>jsqlparser</artifactId>
             <version>4.1</version>
         </dependency>
-
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -71,6 +70,12 @@
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
