去掉druid的相关

--- a/acTable-demo/src/main/resources/application.yml
+++ b/acTable-demo/src/main/resources/application.yml
@@ -6,3 +6,15 @@ server:
 spring:
   profiles:
     active: sql_server
+  datasource:
+    druid:
+      # 配置测试查询语句
+      validation-query: SELECT 1
+      filters: stat,slf4j
+      filter:
+        wall:
+          config:
+            variantCheck: false
+            noneBaseStatementAllow: true
+            commentAllow: true
+            multiStatementAllow: true
