--- a/acTable/pom.xml
+++ b/acTable/pom.xml
@@ -5,17 +5,45 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.gitee.zero-wsh</groupId>
     <artifactId>acTable</artifactId>
     <version>2.0.0</version>
+    <packaging>jar</packaging>
 
+
+    <!-- 都是必不可少的，其中url为自己的github的项目位置 -->
+    <name>acTable</name>
+    <description>通过实体类自动建表</description>
+    <url>https://gitee.com/zero-wsh/zero-acTable</url>
+    <!-- 配置developers  -->
+    <developers>
+        <developer>
+            <name>zero</name>
+            <email>15397608105@163.com</email>
+        </developer>
+    </developers>
+    <!-- 将其改为自己的github项目即可-->
+    <scm>
+        <connection>scm:git:git://gitee.com/zero-wsh/zero-acTable.git</connection>
+        <developerConnection>scm:git:ssh://gitee.com/zero-wsh/zero-acTable.git</developerConnection>
+        <url>http://gitee.com/zero-wsh/zero-acTable</url>
+    </scm>
+    <!-- 配置Licenses  -->
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
     <properties>
         <mybatis.plus.version>3.4.3.1</mybatis.plus.version>
         <hutool.version>5.6.1</hutool.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.8</jdk.version>
     </properties>
 
     <dependencies>
@@ -71,6 +99,131 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0</version>
         </dependency>
-    </dependencies>
+    </dependencies><build>
+    <plugins>
+        <!--<plugin>-->
+        <!--<groupId>com.mysema.maven</groupId>-->
+        <!--<artifactId>apt-maven-plugin</artifactId>-->
+        <!--<version>1.1.3</version>-->
+        <!--<executions>-->
+        <!--<execution>-->
+        <!--<goals>-->
+        <!--<goal>process</goal>-->
+        <!--</goals>-->
+        <!--<configuration>-->
+        <!--<outputDirectory>target/generated-sources/java</outputDirectory>-->
+        <!--<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>-->
+        <!--</configuration>-->
+        <!--</execution>-->
+        <!--</executions>-->
+        <!--</plugin>-->
+
+
+        <plugin>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.3.2</version>
+            <executions>
+                <execution>
+                    <id>default-jar</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.6.1</version>
+            <configuration>
+                <source>${jdk.version}</source>
+                <target>${jdk.version}</target>
+            </configuration>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.10.4</version>
+            <configuration>
+                <!-- 解决 java8 下发布到 maven 中心库时，生成 doc 的异常 -->
+                <additionalparam>-Xdoclint:none</additionalparam>
+                <encoding>${project.build.sourceEncoding}</encoding>
+                <excludePackageNames>io.gitee.zerowsh</excludePackageNames>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>attach-javadocs</id>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <!-- 安装源码到本地仓库 -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.1.2</version>
+            <executions>
+                <execution>
+                    <id>attach-sources</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>jar-no-fork</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+                <execution>
+                    <id>sign-artifacts</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>sign</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <!--<plugin>-->
+        <!--<groupId>org.sonatype.plugins</groupId>-->
+        <!--<artifactId>nexus-staging-maven-plugin</artifactId>-->
+        <!--<version>1.6.8</version>-->
+        <!--<extensions>true</extensions>-->
+        <!--<configuration>-->
+        <!--&lt;!&ndash; 对应 maven settings.xml 中的 server 配置 &ndash;&gt;-->
+        <!--<serverId>ossrh</serverId>-->
+        <!--<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>-->
+        <!--<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
+        <!--</configuration>-->
+        <!--</plugin>-->
+    </plugins>
+</build>
+
+    <!-- 下方url一般都是如此，从官方文档中也能看到 -->
+    <distributionManagement>
+        <repository>
+            <id>ossrh</id>  <!-- 即可maven setting.xml配置的id -->
+            <name>Stage repository</name>
+            <url>
+                https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+            </url>
+        </repository>
+
+        <snapshotRepository>
+            <id>ossrh</id>
+            <name>Snapshots repository</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
